--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="style.css">
   <script src="src/main.js" type="module" defer></script>
-
+  <script>function play(){ new Audio('./public/newFollowers.mp3').play()}</script>
 </head>
 <body>
   
@@ -27,7 +27,7 @@
         <tr>
           <th>User</th>
           <th>Repos</th>
-          <th>Folowoxz</th>
+          <th><button onclick="play()">Followers</button></th>             
           <th>X</th>
         </tr>
       </thead>
