--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 </head>
 <body>
+
   
   <div class="main">
     <header>
       <svg id="logo" width="125" height="33" viewBox="0 0 187 33" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>
       <section class="inputSect">
         <label for="userInput"></label>
-        <input id="userInput" placeholder="Github username">
+        <input id="userInput" placeholder="Digite o Github username que quer favoritar">
         <button id="addBtn"> <svg id="starBtn" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>  
           FAVORITAR </button>
       </section>
