--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="src/main.js" type="module" defer></script>
   <script>function play(){ new Audio('./public/newFollowers.mp3').play()}</script>
@@ -14,7 +14,6 @@
 </head>
 <body>
 
-  
   <div class="main">
     <header>
       <svg id="logo" width="125" height="33" viewBox="0 0 187 33" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>
@@ -24,21 +23,26 @@
         <button id="addBtn"> <svg id="starBtn" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>  
           FAVORITAR </button>
       </section>
-
     </header>
 
-    <table>
-    <thead>
-        <tr>
-          <th>User</th>
-          <th>Repos</th>
-          <th><button class="followers" onclick="play()">Followers</button></th>             
-          <th>X</th>
-        </tr>
-      </thead>
-      <tbody id="mainTable">
-      </tbody>
-    </table>
+    <div class="tableContainer">
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Repos</th>
+            <th onclick="play()">Followers</th>
+            <th>X</th>
+          </tr>
+        </thead>
+        <div>
+        <tbody id="mainTable">
+        </tbody>
+      </div>
+      </table>
+    </div>
+
+
 
   </div>
 
